load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//:constants.bzl", "GO_PREFIX")

gazelle(
    name = "gazelle",
    external = "external",
    prefix = GO_PREFIX,
)

buildifier(
    name = "buildifier",
)

load("@com_github_atlassian_bazel_tools//goimports:def.bzl", "goimports")

goimports(
    name = "goimports",
    display_diffs = True,
    prefix = GO_PREFIX,
    write = True,
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rickypai/stardog",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_stripe_skycfg//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)

go_binary(
    name = "stardog",
    embed = [":go_default_library"],
    data = ["hello.sky"],
    visibility = ["//visibility:public"],
)
