load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["board.go"],
    importpath = "github.com/rickypai/skydog/conversion",
    visibility = ["//visibility:public"],
    deps = [
        "//protobufs/datadog:go_default_library",
        "@com_github_zorkian_go_datadog_api//:go_default_library",
    ],
)
