load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "datadog_proto",
    srcs = ["datadog.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "datadog_go_proto",
    importpath = "github.com/rickypai/stardog/protobufs/datadog",
    proto = ":datadog_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":datadog_go_proto"],
    importpath = "github.com/rickypai/stardog/protobufs/datadog",
    visibility = ["//visibility:public"],
)
